clusters/prod/platform/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd
  namespace: argocd
  labels:
    app.kubernetes.io/name: argocd
    app.kubernetes.io/part-of: argocd
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - argocd.douglasbarahona.me
      secretName: argocd-tls
  rules:
    - host: argocd.douglasbarahona.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
